src/blocks/button-container/editor.scss
.gb-button-wrapper {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: flex-start;
    clear: both;
}

.gb-button-wrapper .block-editor-block-list__layout > .block-list-appender {
    display: none !important;
}

.gb-button-wrapper .block-editor-block-list__layout > .block-list-appender:first-child {
    display: block !important;
}

[data-type="generateblocks/button-container"].has-child-selected .gb-button-wrapper > .components-button,
[data-type="generateblocks/button-container"].is-selected .gb-button-wrapper > .components-button {
	display: inline-flex;
}

.gblocks-add-new-button svg {
	margin-right: 0 !important;
}

.gblocks-button-container-appender {
	align-self: center;
}

